# recon-datagen

./: .gitignore  MAPPING_KEY_FIX_SUMMARY.md  README.md  check_keys.py  pyproject.toml  validate_1n.py
evals/: README.md  build_evals.py
evals/bank-recon/: Bank_Statement.csv  Cash_Ledger.csv  bank-recon.xlsx
evals/customer-recon/: AR_Ledger.csv  Customer_Statement.csv  customer-recon.xlsx
evals/expense-recon/: Card_Statement.csv  Expense_Reports.csv  expense-recon.xlsx
evals/fixed-asset-recon/: FA_Register.csv  GL_FA_Accounts.csv  fixed-asset-recon.xlsx
evals/gl-subledger/: GL_Summary.csv  Subledger_Detail.csv  gl-subledger.xlsx
evals/intercompany/: Entity_A_IC_Ledger.csv  Entity_B_IC_Ledger.csv  intercompany.xlsx
evals/inventory-recon/: ERP_Inventory.csv  Physical_Count.csv  inventory-recon.xlsx
evals/payroll-recon/: GL_Payroll.csv  Payroll_System.csv  payroll-recon.xlsx
evals/tax-recon/: ERP_Tax_Calculation.csv  Filed_Tax_Return.csv  tax-recon.xlsx
evals/vendor-recon/: AP_Ledger.csv  Vendor_Statement.csv  vendor-recon.xlsx
src/recon_datagen/: __init__.py  cli.py  generator.py  models.py  writer.py
src/recon_datagen/scenarios/: __init__.py  bank_recon.py  base.py  customer_recon.py  expense_recon.py  fixed_asset_recon.py  gl_subledger.py  intercompany.py  inventory_recon.py  payroll_recon.py  tax_recon.py  vendor_recon.py
tests/: test_composite_keys.py  test_core_reconciliation_rules.py  test_mapping_key_variation.py
