[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recon-datagen"
version = "0.1.0"
description = "Reconciliation test data generator for creating matched, potentially matched, and unmatched transaction datasets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Recon Team"}
]
dependencies = [
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "openpyxl>=3.1.0",
    "faker>=20.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
recon-datagen = "recon_datagen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
